@@ -389,7 +389,7 @@ public final class MetadataFactory {
       Class<?> checkClass = CheckstylePlugin.getDefault().getAddonExtensionClassLoader()
               .loadClass(module.getName());
 
-      Object moduleInstance = checkClass.newInstance();
+      Object moduleInstance = checkClass.getDeclaredConstructor().newInstance();
 
       if (moduleInstance instanceof AbstractFileSetCheck) {
         parent = XMLTags.CHECKER_MODULE;
@@ -841,7 +841,7 @@ public final class MetadataFactory {
 
             if (IOptionProvider.class.isAssignableFrom(providerClass)) {
 
-              IOptionProvider provider = (IOptionProvider) providerClass.newInstance();
+              IOptionProvider provider = (IOptionProvider) providerClass.getDeclaredConstructor().newInstance();
               property.getPropertyEnumeration().addAll(provider.getOptions());
             } else if (Enum.class.isAssignableFrom(providerClass)) {
 
